# mlops-k8s-project

./: .gitignore  README.md  cleanup.sh  mlflow.db  pyproject.toml  setup.sh
.github/workflows/: ci-cd.yaml
app/: app.py  drift.py  model_loader.py
data/: drift.csv  train.csv
docker/: Dockerfile
k8s/: deployment-v1.yaml  deployment-v2-canary.yaml  service.yaml
mlops_k8s_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mlruns/1/models/m-71dd823618644fa589a7bb11b9125a54/artifacts/: MLmodel  conda.yaml
models/: generate_drift.py  train.py  tune.py
