[project]
name = "mlops-k8s-project"
version = "0.1.0"
description = "MLOps project with MLflow, FastAPI, and Kubernetes"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Core ML
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",

    # Experiment tracking
    "mlflow>=2.12.0",

    # API layer
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",

    # Monitoring / drift
    "evidently>=0.4.20",

    # Hyperparameter tuning
    "hyperopt>=0.2.7",

    # Dev tools
    "ruff>=0.4.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ipykernel>=6.29.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "models*"]
exclude = ["data*", "k8s*", "docker*", "evidently*"]
